k8s-manifests/argo-rollouts/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - argo-rollouts.server.home
  rules:
    - backendRefs:
        - name: argo-rollouts-dashboard
          namespace: argo-rollouts
          port: 3100
